--- a/index.html
+++ b/index.html
@@ -135,257 +135,17 @@
             ></path>
           </svg>
         </div>
-        <div class="hm-menu">
+        <button class="hm-menu" id="hm-menu">
           <div></div>
           <div></div>
           <div></div>
+        </button>
+        <div class="close" id="close-menu"></div>
+        <div class="overlay"></div>
+        <div class="burger-menu">
+          <div class="menu-content" id="menu-content"></div>
         </div>
-        <div class="navbar-menu">
-          <div class="dropdown">
-            <button class="drop-btn">Why Spring</button>
-            <i class="arrow down"></i>
-            <ul class="dropdown-content">
-              <li>
-                <a class="dropdown-item" href="https://spring.io/why-spring"
-                  >Overview</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="/microservices">Microservices</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="https://spring.io/reactive"
-                  >Reactive</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="https://spring.io/event-driven"
-                  >Event Driven</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="https://spring.io/cloud"
-                  >Cloud</a
-                >
-              </li>
-              <li>
-                <a
-                  class="dropdown-item"
-                  href="https://spring.io/web-applications"
-                >
-                  Web Applications
-                </a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="https://spring.io/serverless"
-                  >Serverless</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="https://spring.io/batch"
-                  >Batch</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="dropdown">
-            <button class="drop-btn">Learn</button>
-            <i class="arrow down"></i>
-            <ul class="dropdown-content">
-              <li>
-                <a class="dropdown-item" href="https://spring.io/learn"
-                  >Overview</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="https://spring.io/quickstart"
-                  >Quickstart</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="https://spring.io/guides"
-                  >Guides</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="https://spring.io/blog"
-                >Blog</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="dropdown">
-            <button class="drop-btn">Projects</button>
-            <i class="arrow down"></i>
-            <ul class="dropdown-content">
-              <li>
-                <a
-                  aria-current="page"
-                  class="dropdown-item"
-                  href="https://spring.io/projects"
-                  >Overview</a
-                >
-              </li>
-              <li>
-                <a
-                  class="dropdown-item"
-                  href="https://spring.io/projects/spring-boot"
-                  >Spring Boot</a
-                >
-              </li>
-              <li>
-                <a
-                  class="dropdown-item"
-                  href="https://spring.io/projects/spring-framework"
-                  >Spring Framework</a
-                >
-              </li>
-              <li>
-                <a
-                  class="dropdown-item"
-                  href="https://spring.io/projects/spring-cloud"
-                  >Spring Cloud</a
-                >
-              </li>
-              <li>
-                <a
-                  class="dropdown-item"
-                  href="https://spring.io/projects/spring-cloud-dataflow"
-                  >Spring Cloud Data Flow</a
-                >
-              </li>
-              <li>
-                <a
-                  class="dropdown-item"
-                  href="https://spring.io/projects/spring-data"
-                  >Spring Data</a
-                >
-              </li>
-              <li>
-                <a
-                  class="dropdown-item"
-                  href="https://spring.io/projects/spring-integration"
-                  >Spring Integration</a
-                >
-              </li>
-              <li>
-                <a
-                  class="dropdown-item"
-                  href="https://spring.io/projects/spring-batch"
-                  >Spring Batch</a
-                >
-              </li>
-              <li>
-                <a
-                  class="dropdown-item"
-                  href="https://spring.io/projects/spring-security"
-                  >Spring Security</a
-                >
-              </li>
-              <li>
-                <a
-                  class="dropdown-item is-link mb-5"
-                  href="https://spring.io/projects/"
-                  >View all projects</a
-                >
-              </li>
-              <li>
-                <section class="dropdown-item">DEVELOPMENT TOOLS</section>
-              </li>
-              <li>
-                <a class="dropdown-item" href="https://spring.io/tools"
-                  >Spring Tools 4</a
-                >
-              </li>
-              <li>
-                <a
-                  aria-label="Spring Initializr, Open in a new tab"
-                  href="https://start.spring.io/"
-                  class="dropdown-item"
-                  >Spring Initializr
-                  <svg
-                    class="svg-inline"
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 512 512"
-                  >
-                    <path
-                      fill="currentColor"
-                      d="M320 0c-17.7 0-32 14.3-32 32s14.3 32 32 32h82.7L201.4 265.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L448 109.3V192c0 17.7 14.3 32 32 32s32-14.3 32-32V32c0-17.7-14.3-32-32-32H320zM80 32C35.8 32 0 67.8 0 112V432c0 44.2 35.8 80 80 80H400c44.2 0 80-35.8 80-80V320c0-17.7-14.3-32-32-32s-32 14.3-32 32V432c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16V112c0-8.8 7.2-16 16-16H192c17.7 0 32-14.3 32-32s-14.3-32-32-32H80z"
-                    ></path>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="dropdown">
-            <button class="drop-btn">Academy</button>
-            <i class="arrow down"></i>
-            <ul class="dropdown-content">
-              <li>
-                <a href="https://spring.academy/courses" class="dropdown-item"
-                  >Courses</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://spring.academy/learning-path"
-                  class="dropdown-item"
-                  >Get Certified</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="dropdown">
-            <button class="drop-btn">Solutions</button>
-            <i class="arrow down"></i>
-            <ul class="dropdown-content">
-              <li>
-                <a class="dropdown-item" href="https://spring.io/solutions"
-                  >Overview</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="https://spring.io/support"
-                  >Spring Runtime</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="https://spring.io/consulting"
-                  >Spring Consulting</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="https://spring.academy/teams"
-                  >Spring Academy For Teams</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="https://spring.io/security"
-                  >Security Advisories</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="dropdown">
-            <button class="drop-btn">Community</button>
-            <i class="arrow down"></i>
-            <ul class="dropdown-content">
-              <li>
-                <a class="dropdown-item" href="https://spring.io/community"
-                  >Overview</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="https://spring.io/events"
-                  >Events</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="https://spring.io/team">Team</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+        <div class="navbar-menu" id="navbar-menu"></div>
       </nav>
     </header>
     <main class="main">
@@ -400,105 +160,16 @@
       </div>
     </main>
     <section class="project-section">
-      <div class="list container">
-        <article class="article">
-          <a class="article-item" href="https://spring.io/projects/spring-boot">
-            <img
-              class="article-item__img"
-              q
-              src="https://spring.io/img/projects/spring-boot.svg"
-              alt="Spring Boot"
-            />
-            <div class="article-item__info">
-              <h1 class="article-item__h1">Spring Boot</h1>
-              <p class="article-item__p">
-                Takes an opinionated view of building Spring applications and
-                gets you up and running as quickly as possible.
-              </p>
-            </div>
-          </a>
-        </article>
-        <article class="article">
-          <a class="article-item" href="https://spring.io/projects/spring-boot">
-            <img
-              class="article-item__img"
-              src="https://spring.io/img/projects/spring-framework.svg?v=2"
-              alt="Spring Framework"
-            />
-            <div class="article-item__info">
-              <h1 class="article-item__h1">Spring Framework</h1>
-              <p class="article-item__p">
-                Provides core support for dependency injection, transaction
-                management, web apps, data access, messaging, and more.
-              </p>
-            </div>
-          </a>
-        </article>
-        <article class="article">
-          <a class="article-item" href="https://spring.io/projects/spring-boot">
-            <img
-              class="article-item__img"
-              src="https://spring.io/img/projects/spring-data.svg"
-              alt="Spring Boot"
-            />
-            <div class="article-item__info">
-              <h1 class="article-item__h1">Spring Data</h1>
-              <p class="article-item__p">
-                Provides a consistent approach to data access – relational,
-                non-relational, map-reduce, and beyond.
-              </p>
-            </div>
-          </a>
-        </article>
-        <article class="article">
-          <a class="article-item" href="https://spring.io/projects/spring-boot">
-            <img
-              class="article-item__img"
-              src="https://spring.io/img/projects/spring-cloud.svg"
-              alt="Spring Boot"
-            />
-            <div class="article-item__info">
-              <h1 class="article-item__h1">Spring Cloud</h1>
-              <p class="article-item__p">
-                Provides a set of tools for common patterns in distributed
-                systems. Useful for building and deploying microservices.
-              </p>
-            </div>
-          </a>
-        </article>
-        <article class="article">
-          <a class="article-item" href="https://spring.io/projects/spring-boot">
-            <img
-              class="article-item__img"
-              src="https://spring.io/img/projects/spring-data-flow.svg"
-              alt="Spring Boot"
-            />
-            <div class="article-item__info">
-              <h1 class="article-item__h1">Spring Cloud Data Flow</h1>
-              <p class="article-item__p">
-                Provides an orchestration service for composable data
-                microservice applications on modern runtimes.
-              </p>
-            </div>
-          </a>
-        </article>
-        <article class="article">
-          <a class="article-item" href="https://spring.io/projects/spring-boot">
-            <img
-              class="article-item__img"
-              src="https://spring.io/img/projects/spring-security.svg"
-              alt="Spring Boot"
-            />
-            <div class="article-item__info">
-              <h1 class="article-item__h1">Spring Security</h1>
-              <p class="article-item__p">
-                Protects your application with comprehensive and extensible
-                authentication and authorization support.
-              </p>
-            </div>
-          </a>
-        </article>
+      <div class="search-field">
+        <input
+          class="search-field__input"
+          type="text"
+          id="searchInput"
+          placeholder="Search"
+        />
       </div>
+      <div class="list container" id="list"></div>
     </section>
+    <script src="/scripts/index.js"></script>
   </body>
 </html>
