--- a/index.html
+++ b/index.html
@@ -170,6 +170,6 @@
       </div>
       <div class="list container" id="list"></div>
     </section>
-    <script src="/scripts/index.js"></script>
+    <script type="module" src="https://sanb4ik.github.io/Spring-Projects/scripts/index.js"></script>
   </body>
 </html>
