--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
       </div>
       <div class="list container" id="list"></div>
     </section>
+    <script type="module" src="https://sanb4ik.github.io/Spring-Projects/scripts/constants.js"></script>
     <script type="module" src="https://sanb4ik.github.io/Spring-Projects/scripts/index.js"></script>
   </body>
 </html>
