--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@
       </div>
       <div class="list container" id="list"></div>
     </section>
+    <script type="module" src="https://sanb4ik.github.io/Spring-Projects/scripts/articles.js"></script>
+    <script type="module" src="https://sanb4ik.github.io/Spring-Projects/scripts/input.js"></script>
+    <script type="module" src="https://sanb4ik.github.io/Spring-Projects/scripts/menu.js"></script>
     <script type="module" src="https://sanb4ik.github.io/Spring-Projects/scripts/constants.js"></script>
-    <script type="module" src="https://sanb4ik.github.io/Spring-Projects/scripts/index.js"></script>
+<!--    <script type="module" src="https://sanb4ik.github.io/Spring-Projects/scripts/index.js"></script>-->
   </body>
 </html>
